unpackaged/main/default/objects/bt_base__Form_Element__c/bt_base__Form_Element__c.object-meta.xml
<CustomObject>
    <description>Questions or other types of controls as part of a Form.</description>
    <label>BT Form Element</label>
    <nameField>
        <displayFormat>FE-{000000}</displayFormat>
        <label>BT Form Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Form Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>