unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Default_Value__c</fullName>
    <description>Set the default value for the question.</description>
    <inlineHelpText>Set the default value for the question.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>