unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Form__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The BT Form this BT Form Element is related to.</description>
    <inlineHelpText>The BT Form this BT Form Element is related to.</inlineHelpText>
    <label>BT Form</label>
    <referenceTo>bt_base__Form__c</referenceTo>
    <relationshipLabel>BT Form Elements</relationshipLabel>
    <relationshipName>Form_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>