unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Form_Big_List_Group__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form_Big_List_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this BT Form Element references a Big List Group.</description>
    <inlineHelpText>Select a BT Form Big List Group if you have a picklist or a type ahead custom question that has more than 1,000 possible options.</inlineHelpText>
    <label>BT Form Big List Group</label>
    <referenceTo>bt_base__Form_Big_List_Group__c</referenceTo>
    <relationshipLabel>Form Elements</relationshipLabel>
    <relationshipName>Form_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>