unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Hint__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Hint__c</fullName>
    <description>A hint for this question. Will be displayed as placeholder text within the input field on the BT Form.</description>
    <inlineHelpText>A hint for this question. Will be displayed as placeholder text within the input field on the BT Form.</inlineHelpText>
    <label>Hint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>