unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Maps_To_Field__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Maps_To_Field__c</fullName>
    <description>The BT Form Element&#39;s answer will map to this field.</description>
    <inlineHelpText>The BT Form Element&#39;s answer will map to this field.</inlineHelpText>
    <label>Maps To (Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>