unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Question__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Question__c</fullName>
    <description>The question of this BT Form Element.</description>
    <inlineHelpText>The question of this BT Form Element.</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>