unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Question_RT__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Question_RT__c</fullName>
    <description>Supplemental question information can be used to show terms and conditions or other rich text for a question.</description>
    <inlineHelpText>Supplemental question information can be used to show terms and conditions or other rich text for a question.</inlineHelpText>
    <label>Supplemental Question Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>