unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Required__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the BT Form Element is required.</description>
    <inlineHelpText>Select this checkbox if the BT Form Element is required.</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>