unpackaged/main/default/objects/bt_base__Form_Element__c/fields/bt_base__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Sort_Order__c</fullName>
    <description>Set the order for the questions/BT Form Elements.</description>
    <inlineHelpText>Set the order for the questions/BT Form Elements.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>